5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1573_1333.log
== SUBMITION (2019-03-13 15:30:55) 
-- CODE:
expressao = 
print(0 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.214647
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:30:56) 
-- CODE:
expressao = 
print(0 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:31:05) 
-- CODE:
expressao = print(0 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = print(0 – 3 ** 2 + 8 // 3 ** 2 * 10)
                        ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:31:06) 
-- CODE:
expressao = print(0 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.179952
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = print(0 \u2013 3 ** 2 + 8 // 3 ** 2 * 10)
                        ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:31:11) 
-- CODE:
expressao = 0 – 3 ** 2 + 8 // 3 ** 2 * 10
print(0 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 0 – 3 ** 2 + 8 // 3 ** 2 * 10
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:31:12) 
-- CODE:
expressao = 0 – 3 ** 2 + 8 // 3 ** 2 * 10
print(0 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.149195
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 0 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:31:12) 
-- CODE:
expressao = 0 – 3 ** 2 + 8 // 3 ** 2 * 10
print(0 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.129574
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 0 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:31:12) 
-- CODE:
expressao = 0 – 3 ** 2 + 8 // 3 ** 2 * 10
print(0 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.100801
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 0 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:32:04) 
-- CODE:
expressao = 
print(0 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.194797
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:33:02) 
-- CODE:
expressao = 
print(0 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:33:03) 
-- CODE:
expressao = 
print(0 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.219695
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:33:04) 
-- CODE:
expressao = 
print(0 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.173427
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:33:33) 
-- CODE:
expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:33:34) 
-- CODE:
expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.210912
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
-9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:33:35) 
-- CODE:
expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:33:51) 
-- CODE:
expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:33:52) 
-- CODE:
expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
-- EXECUTION TIME:
0.164265
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1333/main.py", line 1, in <module>
    expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:33:52) 
-- CODE:
expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
-- EXECUTION TIME:
0.141419
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1333/main.py", line 1, in <module>
    expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:33:53) 
-- CODE:
expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
-- EXECUTION TIME:
0.110958
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1333/main.py", line 1, in <module>
    expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:33:53) 
-- CODE:
expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
-- EXECUTION TIME:
0.116636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1333/main.py", line 1, in <module>
    expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:33:53) 
-- CODE:
expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
-- EXECUTION TIME:
0.116296
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1333/main.py", line 1, in <module>
    expressao = print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:43:02) 
-- CODE:

print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
-- EXECUTION TIME:
0.149617
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1333/main.py", line 2, in <module>
    print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
TypeError: 'NoneType' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:43:04) 
-- CODE:

print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(0 - 3 ** 2 + 8 // 3 ** 2 * 10) (-9)
TypeError: 'NoneType' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:43:49) 
-- CODE:
x=(0 - 3 ** 2 + 8 // 3 ** 2 * 10)
print (x)
-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:43:51) 
-- CODE:
x=(0 - 3 ** 2 + 8 // 3 ** 2 * 10)
print (x)
-- EXECUTION TIME:
0.212177
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
-9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:45:06) 
-- CODE:
x=((0 -- 3 ** 2 + 8) // (3 ** 2 * 10))
print (x)
-- OUTPUT:
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:45:09) 
-- CODE:
x=((0 -- 3 ** 2 + 8) // (3 ** 2 * 10))
print (x)
-- EXECUTION TIME:
0.169897
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:46:04) 
-- CODE:
x=((0 - (3 ** 2) + 8) // ((3 ** 2) * 10))
print (x)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:46:07) 
-- CODE:
x=((0 - (3 ** 2) + 8) // ((3 ** 2) * 10))
print (x)
-- EXECUTION TIME:
0.180474
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
-1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:46:24) 
-- CODE:
x=((30 - (3 ** 2) + 8) // ((3 ** 2) * 10))
print (x)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:46:26) 
-- CODE:
x=((30 - (3 ** 2) + 8) // ((3 ** 2) * 10))
print (x)
-- EXECUTION TIME:
0.130554
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:47:29) 
-- CODE:
x=((-(3 ** 2)+30 + 8) // ((3 ** 2) * 10))
print (x)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:08:26) 
-- CODE:
x=((30 - (3 ** 2) + 8) // ((3 ** 2) * 10))
print (x)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:08:37) 
-- CODE:
x=((30 - (3 ** 2) + 8) / ((3 ** 2) * 10))
print (x)
-- OUTPUT:
0.32222222222222224
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:09:31) 
-- CODE:
x=((30 - a + 8) // (a * 10))
a= 3 ** 2
print (x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=((30 - a + 8) // (a * 10))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:09:42) 
-- CODE:
a= 3 ** 2
x=((30 - a + 8) // (a * 10))

print (x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=((30 - a + 8) // (a * 10))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 20:09:46) 
-- CODE:
a= 3 ** 2
x=((30 - a + 8) // (a * 10))

print (x)
-- EXECUTION TIME:
0.155339
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 20:11:34) 
-- CODE:
a= 3 ** 2
x= 30 - a + 8 // a * 10

print (x)
-- EXECUTION TIME:
0.139658
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
